<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/bg1"
>
  <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical" >
        
<TableLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"       
  android:paddingLeft="10dp"
  android:paddingRight="10dp"
   android:id="@+id/layout1"
>
  <DigitalClock
    android:id="@+id/dClock"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="40sp"
    android:textColor="@color/title"
    android:layout_x="70px"
    android:layout_y="32px"
      style="show_tv1"
  >
  </DigitalClock>
  
     <TableRow>
         
	  <TextView
	    android:id="@+id/text1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/str_title3"
	    android:textSize="20sp"
	    android:layout_margin="2dp"
	    android:textColor="@drawable/black"
	    style="@style/scheduleInsert_tv1">
	  >
	  </TextView>
	  <Button
	    android:id="@+id/mButton1"
	    android:layout_width="wrap_content"
	    android:layout_height="60px"
	    android:text="@string/str_button1"
	    android:textColor="@drawable/black"
	    android:textSize="20sp"
       android:layout_marginLeft="10dp" 
	    android:background="@drawable/ios_button_grouped"
	  >
      </Button>
         </TableRow>
            <TableRow>
	    <TextView
		    android:id="@+id/setTime1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_default"
		    android:textColor="@color/black"
		    android:textSize="16sp"
		     android:layout_margin="2dp"
		      android:layout_marginLeft="10dp" 
		      style="@style/scheduleInsert_tv1"
		    >
	  </TextView>
	  <Button
		    android:id="@+id/mButton2"
		    android:layout_width="wrap_content"
		    android:layout_height="60px"
		    android:text="@string/str_button2"
		    android:textColor="@drawable/black"
		    android:textSize="20sp"
		 android:layout_marginTop="5dp" 
		        android:layout_marginLeft="10dp" 
		     android:background="@drawable/ios_button_grouped"
	  >
	  </Button>
	  
	   </TableRow>
	      <TableRow>
	  <TextView
		    android:id="@+id/text2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_title2"
		    android:textSize="20sp"
		    android:textColor="@drawable/black"
		        android:layout_margin="2dp"
		    style="@style/scheduleInsert_tv1">
	  >
	  </TextView>
	  <Button
		    android:id="@+id/mButton3"
		    android:layout_width="wrap_content"
		    android:layout_height="60px"
		    android:text="@string/str_button1"
		    android:textColor="@drawable/black"
		    android:textSize="20sp"
		      android:layout_marginLeft="10dp" 
		       android:layout_marginTop="10dp" 
		     android:background="@drawable/ios_button_grouped"
	  >
	  </Button>
	     </TableRow>
	        <TableRow>
	  <TextView
		    android:id="@+id/setTime2"
		    android:layout_width="170px"
		    android:layout_height="wrap_content"
		    android:text="@string/str_default"
		    android:textColor="@color/black"
		    android:textSize="16sp"
		        android:layout_margin="2dp"
		         style="@style/scheduleInsert_tv1"
	  >
      </TextView>
	  <Button
		    android:id="@+id/mButton4"
		    android:layout_width="wrap_content"
		    android:layout_height="60px"
		    android:text="@string/str_button2"
		    android:textColor="@drawable/black"
		    android:textSize="20sp"
		         android:layout_marginLeft="10dp" 
		         android:layout_marginTop="5dp" 
		     android:background="@drawable/ios_button_grouped"
	  >
	  </Button>
	     </TableRow>
	        <TableRow>
	  <TextView
		    android:id="@+id/text3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_title5"
		    android:textSize="20sp"
		        android:layout_margin="2dp"
		    android:textColor="@drawable/black"
		     style="@style/scheduleInsert_tv1">
	  >
	  </TextView>
	  <Button
		    android:id="@+id/mButton5"
		    android:layout_width="wrap_content"
		    android:layout_height="60px"
		    android:text="@string/str_button1"
		    android:textColor="@drawable/black"
		    android:textSize="20sp"
		    android:layout_marginLeft="10dp" 
		    android:layout_marginTop="10dp" 
		     android:background="@drawable/ios_button_grouped"
	  >
	  </Button>
	     </TableRow>
	        <TableRow>
	  <TextView
		    android:id="@+id/setTime3"
		    android:layout_width="170px"
		    android:layout_height="wrap_content"
		    android:text="@string/str_default"
		    android:textColor="@color/black"
		    android:textSize="16sp"
		        android:layout_margin="2dp"
		         style="@style/scheduleInsert_tv1"
	  >
      </TextView>
	  <Button
		    android:id="@+id/mButton6"
		    android:layout_width="wrap_content"
		    android:layout_height="60px"
		    android:text="@string/str_button2"
		    android:textColor="@drawable/black"
		    android:textSize="20sp"
		     android:layout_marginLeft="10dp" 
		     android:layout_marginTop="5dp" 
		     android:background="@drawable/ios_button_grouped"
	  >
	  </Button>
	     </TableRow>
	 </TableLayout>
	  </ScrollView>
</AbsoluteLayout>